[gd_scene load_steps=44 format=3 uid="uid://b82xyl2dqnwky"]

[ext_resource type="Script" path="res://gameElements/elemntScripts/player.gd" id="1_xki20"]
[ext_resource type="Texture2D" uid="uid://d2sjfw4jj2jjt" path="res://playerArt/Spritesheet.png" id="2_sbp8o"]
[ext_resource type="Script" path="res://gameElements/elemntScripts/sniber.gd" id="3_3my5u"]
[ext_resource type="Texture2D" uid="uid://ddvp0cxohsmto" path="res://playerArt/sniber.png" id="3_npura"]
[ext_resource type="Texture2D" uid="uid://dbd6w1c4rb3mc" path="res://playerArt/armBottomFill.png" id="5_q1ls1"]
[ext_resource type="Texture2D" uid="uid://bwxn12sct6yha" path="res://playerArt/armBottomShadow.png" id="6_h0onb"]
[ext_resource type="Texture2D" uid="uid://cwrwaqosa7mev" path="res://playerArt/armTopFill.png" id="7_f2mqu"]
[ext_resource type="Texture2D" uid="uid://bys7da5upbuyw" path="res://playerArt/armTopShadow.png" id="8_i75nq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nwfhp"]
atlas = ExtResource("2_sbp8o")
region = Rect2(1244, 3354, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1eis"]
atlas = ExtResource("2_sbp8o")
region = Rect2(1866, 3354, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc75q"]
atlas = ExtResource("2_sbp8o")
region = Rect2(622, 2795, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlmes"]
atlas = ExtResource("2_sbp8o")
region = Rect2(0, 2795, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_54y4a"]
atlas = ExtResource("2_sbp8o")
region = Rect2(0, 2236, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u7ks"]
atlas = ExtResource("2_sbp8o")
region = Rect2(622, 2236, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_dquxn"]
atlas = ExtResource("2_sbp8o")
region = Rect2(1244, 2795, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_w25yo"]
atlas = ExtResource("2_sbp8o")
region = Rect2(1866, 2795, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_d77cf"]
atlas = ExtResource("2_sbp8o")
region = Rect2(1244, 2236, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_j03jm"]
atlas = ExtResource("2_sbp8o")
region = Rect2(1866, 2236, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ciey"]
atlas = ExtResource("2_sbp8o")
region = Rect2(622, 3354, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vnig"]
atlas = ExtResource("2_sbp8o")
region = Rect2(0, 3354, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_11r3e"]
atlas = ExtResource("2_sbp8o")
region = Rect2(0, 1677, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v48c"]
atlas = ExtResource("2_sbp8o")
region = Rect2(622, 1677, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6g5n"]
atlas = ExtResource("2_sbp8o")
region = Rect2(1244, 1677, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy48x"]
atlas = ExtResource("2_sbp8o")
region = Rect2(1866, 1677, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1ace"]
atlas = ExtResource("2_sbp8o")
region = Rect2(0, 0, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqt0u"]
atlas = ExtResource("2_sbp8o")
region = Rect2(622, 0, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xd0j"]
atlas = ExtResource("2_sbp8o")
region = Rect2(1244, 0, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_ja6sj"]
atlas = ExtResource("2_sbp8o")
region = Rect2(1866, 0, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_b050k"]
atlas = ExtResource("2_sbp8o")
region = Rect2(0, 1118, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4yf4"]
atlas = ExtResource("2_sbp8o")
region = Rect2(622, 1118, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiub7"]
atlas = ExtResource("2_sbp8o")
region = Rect2(1244, 1118, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_afv3o"]
atlas = ExtResource("2_sbp8o")
region = Rect2(1866, 1118, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmn3w"]
atlas = ExtResource("2_sbp8o")
region = Rect2(0, 559, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jh65"]
atlas = ExtResource("2_sbp8o")
region = Rect2(622, 559, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_ligk3"]
atlas = ExtResource("2_sbp8o")
region = Rect2(1244, 559, 622, 559)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lrps"]
atlas = ExtResource("2_sbp8o")
region = Rect2(1866, 559, 622, 559)

[sub_resource type="SpriteFrames" id="SpriteFrames_326wc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwfhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1eis")
}],
"loop": false,
"name": &"die",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc75q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlmes")
}],
"loop": true,
"name": &"idleB",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_54y4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u7ks")
}],
"loop": true,
"name": &"idleF",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dquxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w25yo")
}],
"loop": true,
"name": &"idleL",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d77cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j03jm")
}],
"loop": true,
"name": &"idleR",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ciey")
}],
"loop": false,
"name": &"knockedL",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vnig")
}],
"loop": false,
"name": &"knockedR",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_11r3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v48c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6g5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy48x")
}],
"loop": true,
"name": &"moveB",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1ace")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqt0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xd0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja6sj")
}],
"loop": true,
"name": &"moveF",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b050k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4yf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiub7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afv3o")
}],
"loop": true,
"name": &"moveL",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmn3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jh65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ligk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lrps")
}],
"loop": true,
"name": &"moveR",
"speed": 6.0
}]

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_2fhim"]
target_nodepath = NodePath("../../SniberAnchor/handTargetR")
flip_bend_direction = true
joint_one_bone_idx = 0
joint_one_bone2d_node = NodePath("UpperArm")
joint_two_bone_idx = 1
joint_two_bone2d_node = NodePath("UpperArm/lowerArm")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_7wpnc"]
enabled = true
modification_count = 1
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_2fhim")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_i7kln"]
target_nodepath = NodePath("../../SniberAnchor/handTargetR")
joint_one_bone_idx = 0
joint_one_bone2d_node = NodePath("UpperArm")
joint_two_bone_idx = 1
joint_two_bone2d_node = NodePath("UpperArm/lowerArm")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_4hkr0"]
enabled = true
modification_count = 1
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_i7kln")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1jg3a"]
radius = 24.5
height = 140.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nlhnp"]
radius = 13.0
height = 42.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
motion_mode = 1
platform_floor_layers = 1
script = ExtResource("1_xki20")
bounce_power = 2.0
terminal_velocity = 1000

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_326wc")
animation = &"idleF"

[node name="SniberAnchor" type="Node2D" parent="."]
z_index = 2
position = Vector2(42, 45)
rotation = -2.00129
script = ExtResource("3_3my5u")
damage = 200.0
reload_time = 1.0

[node name="handTargetR" type="Node2D" parent="SniberAnchor"]
position = Vector2(29, 1)
scale = Vector2(0.15, 0.15)

[node name="Sniber" type="Sprite2D" parent="SniberAnchor"]
z_index = 2
y_sort_enabled = true
position = Vector2(27, -9.53674e-07)
scale = Vector2(0.13, 0.13)
texture = ExtResource("3_npura")
offset = Vector2(740, -126.855)

[node name="bulletSpawnTarget" type="Node2D" parent="SniberAnchor/Sniber"]
position = Vector2(1800, -115)
scale = Vector2(7.69231, 7.69231)

[node name="armR" type="Node2D" parent="."]
z_index = 4
scale = Vector2(0.15, 0.15)

[node name="Skeleton2D" type="Skeleton2D" parent="armR"]
position = Vector2(1, 0)
modification_stack = SubResource("SkeletonModificationStack2D_7wpnc")

[node name="UpperArm" type="Bone2D" parent="armR/Skeleton2D"]
position = Vector2(-175, -175)
rotation = -0.296137
scale = Vector2(0.999966, 0.999966)
rest = Transform2D(0.904648, -0.42608, 0.42608, 0.904648, -175, -175)
metadata/_local_pose_override_enabled_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="armR/Skeleton2D/UpperArm"]
remote_path = NodePath("../../../ArmTopFill")

[node name="lowerArm" type="Bone2D" parent="armR/Skeleton2D/UpperArm"]
position = Vector2(6, 218)
rotation = -1.49255
scale = Vector2(0.999927, 0.999927)
rest = Transform2D(-0.999511, -0.0288494, 0.0288494, -0.999511, 6, 218)
auto_calculate_length_and_angle = false
length = 309.513
bone_angle = -186.06
metadata/_local_pose_override_enabled_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="armR/Skeleton2D/UpperArm/lowerArm"]
rotation = 1.5708
remote_path = NodePath("../../../../ArmBottomFill")

[node name="ArmTopFill" type="Sprite2D" parent="armR"]
z_index = 1
position = Vector2(-174, -175)
rotation = -0.37324
scale = Vector2(0.999966, 0.999966)
texture = ExtResource("7_f2mqu")
offset = Vector2(26.6666, 280)

[node name="ArmTopShadow" type="Sprite2D" parent="armR/ArmTopFill"]
z_index = -1
position = Vector2(26.6667, 286.667)
texture = ExtResource("8_i75nq")
offset = Vector2(-0.333359, -5)

[node name="ArmBottomFill" type="Sprite2D" parent="armR"]
z_index = 1
position = Vector2(-88.9258, 25.7962)
rotation = -1.15055
scale = Vector2(0.999893, 0.999893)
texture = ExtResource("5_q1ls1")
offset = Vector2(20, 40)

[node name="ArmBottomShadow" type="Sprite2D" parent="armR/ArmBottomFill"]
z_index = -1
position = Vector2(20, 40)
texture = ExtResource("6_h0onb")

[node name="armL" type="Node2D" parent="."]
visible = false
z_index = 4
scale = Vector2(0.15, 0.15)

[node name="Skeleton2D" type="Skeleton2D" parent="armL"]
position = Vector2(1, 0)
modification_stack = SubResource("SkeletonModificationStack2D_4hkr0")

[node name="UpperArm" type="Bone2D" parent="armL/Skeleton2D"]
z_index = 4
position = Vector2(175, -175)
rotation = 1.96549
scale = Vector2(0.999966, 0.999966)
rest = Transform2D(0.994132, 0.107936, -0.107936, 0.994132, -29, -26)
metadata/_local_pose_override_enabled_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="armL/Skeleton2D/UpperArm"]
remote_path = NodePath("../../../ArmTopFill")

[node name="lowerArm" type="Bone2D" parent="armL/Skeleton2D/UpperArm"]
position = Vector2(6, 218)
rotation = -3.11274
scale = Vector2(0.999927, 0.999927)
rest = Transform2D(0.0781647, -0.996867, 0.996867, 0.0781647, 6, 218)
auto_calculate_length_and_angle = false
length = 309.513
bone_angle = -186.06
metadata/_local_pose_override_enabled_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="armL/Skeleton2D/UpperArm/lowerArm"]
rotation = 1.5708
remote_path = NodePath("../../../../ArmBottomFill")

[node name="ArmTopFill" type="Sprite2D" parent="armL"]
z_index = 1
position = Vector2(176, -175)
rotation = -1.32456
scale = Vector2(0.999965, 0.999965)
texture = ExtResource("7_f2mqu")
offset = Vector2(26.6666, 280)

[node name="ArmTopShadow" type="Sprite2D" parent="armL/ArmTopFill"]
z_index = -1
position = Vector2(26.6667, 286.667)
texture = ExtResource("8_i75nq")
offset = Vector2(-0.333359, -5)

[node name="ArmBottomFill" type="Sprite2D" parent="armL"]
z_index = 1
position = Vector2(388.88, -127.683)
rotation = 0.740477
scale = Vector2(0.999892, 0.999892)
texture = ExtResource("5_q1ls1")
offset = Vector2(20, 40)

[node name="ArmBottomShadow" type="Sprite2D" parent="armL/ArmBottomFill"]
z_index = -1
position = Vector2(20, 40)
texture = ExtResource("6_h0onb")

[node name="Camera2D" type="Camera2D" parent="."]
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 3.0

[node name="MomentumTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_1jg3a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 57)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_nlhnp")

[connection signal="timeout" from="MomentumTimer" to="." method="_on_momentum_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_entered"]
